added recommended annotations/removed redundant cast