@@ -8,6 +8,7 @@ import preponderous.ponder.minecraft.bukkit.abs.AbstractPluginCommand;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 /**
  * @author Daniel McCoy Stephenson
@@ -15,7 +16,7 @@ import java.util.Arrays;
 public class DefaultCommand extends AbstractPluginCommand {
 
     public DefaultCommand() {
-        super(new ArrayList<>(Arrays.asList("default")), new ArrayList<>(Arrays.asList("dpm.default")));
+        super(new ArrayList<>(List.of("default")), new ArrayList<>(List.of("dpm.default")));
     }
 
     @Override
